src/test/deca/context/invalid/extension/affectation-matrix.deca
// Programme refusant l'affectation à un élement du tableau

{
    int[2, 2] mat;
    mat[1, 1.2] = 1;
    print(mat[1, 1]);
}